# disintegrating_dinosaurs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  animate.py  build.sh  draw_shape.py  notes.md  parameters.json  run.sh  visualize.py
example_forms/: 2_lines_horizontal.json  3_lines_diagonal.json  3_lines_diagonal_mirrored.json  bullseye.json  circle.json  cross.json  d_lines.json  d_lines_mirrored.json  dick.json  h_lines.json  heart.json  rectangle.json  star.json  triangle.json  v_lines.json
src/: main.cpp
src/data_func/: CMakeLists.txt
src/data_func/include/: aligned_allocator.h  csv.h  dataframe.h
src/data_func/src/: csv.cpp  dataframe.cpp
src/datasaurus/: CMakeLists.txt
src/datasaurus/include/: datasaurus.h  forms.h
src/datasaurus/include/forms/: form_bullseye.h  form_circle.h  form_cross.h  form_image.h  form_lines.h  form_parallel_lines.h  form_rectangle.h  form_star.h
src/datasaurus/src/: datasaurus.cpp  forms.cpp
src/image_func/: CMakeLists.txt
src/image_func/include/: images.h
src/image_func/src/: images.cpp
src/json_parser/: CMakeLists.txt
src/math_helper/: CMakeLists.txt
src/math_helper/include/: math_helper.h  statistics.h
src/math_helper/src/: statistics.cpp
src/my_rng/: CMakeLists.txt
src/my_rng/include/: my_rng.h
src/parameters/: CMakeLists.txt
src/parameters/include/: parameters.h  read_parameters.h
src/parameters/src/: default_parameters.cpp  read_parameters.cpp
src/parse_args/: CMakeLists.txt
src/parse_args/include/: parse_args.h
src/parse_args/src/: default_args.cpp  parse_args.cpp
test/: CMakeLists.txt  catch_main.cpp
test/catch/: CMakeLists.txt
test/catch/include/: catch.h
test/data_func/: csv_test.cpp  dataframe_test.cpp
test/datasaurus/: datasaurus_test.cpp
test/math_helper/: statistics_test.cpp
test/my_rng/: my_rng_test.cpp
